namespace SOLID.D;

public abstract class AbstractName
{
    public abstract string FullName();
}