@startuml
'https://plantuml.com/class-diagram

abstract AbstractName{
+ {abstract} FullName() : string
}

AbstractName <|-- RussianName
class RussianName {
- firstName : string
- lastName : string
- patronymic : string

+ RussianName(firstName : string, lastName : string, patronymic : string)

+  FullName() : string
}

AbstractName <|-- AmericanName
class AmericanName {
- firstName : string
- lastName : string
- middleName : string

+ RussianName(firstName : string, middleName : string, lastName : string)

+  FullName() : string
}

AbstractName <--* Person
class Person {
+ name : AbstractName

+ Person(name : AbstractName)
}

@enduml